# SEA-ME-warm-up

./: .gitignore  README.md
module00/: Exercise02.cpp  Exercise03.cpp  convert  phone
module00/Exercise03/: Exercise03.cpp  contents.hpp  func.cpp  func.hpp  phone
module01/: Exercise00.cpp  Exercise01.cpp  Exercise02.cpp  test00  test01  test02
module02/: Exercise00.cpp  test00
module02/Exercise01/: Battery.hpp  Brakes.hpp  Car.hpp  Engine.hpp  Exercise01.cpp  Part.hpp  Wheels.hpp  test01
module03/Exercise03/: CMakeLists.txt  contact_list.hpp  contacts.hpp  main.cpp  phonebook.cpp  phonebook.hpp  phonebook.ui
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Exercise03  build.ninja  cmake_install.cmake
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-3f8a244e199bc957181b.json  cmakeFiles-v1-39bc65248dfc3aff8c22.json  codemodel-v2-88dc08b97c78705d3e93.json  directory-.-Debug-330114bdbb664f358f78.json  (+2 more)
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-ad996285689e8a1900fd.json  index-2023-07-11T17-19-55-0046.json  target-Exercise03-Debug-295c513a59d547e77b66.json  target-Exercise03_autogen-Debug-13b5582bdb3ffed9d8ed.json  target-Exercise03_autogen_timestamp_deps-Debug-97b3ecc0afbbfc04e712.json
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/Exercise03_autogen/: deps
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/Exercise03_autogen/EWIEGA46WW/: moc_phonebook.cpp  moc_phonebook.cpp.d
module03/build-Exercise03-Desktop_Qt_5_15_14_GCC_64bit-Debug/Exercise03_autogen/include/: ui_phonebook.h
module04/RacingGame/: PlayerInputThread.cpp  RacingGame.pro  main.cpp  playerinputthread.cpp  playerinputthread.h  racinggame.cpp  racinggame.h
(+521 files in other folders)
